<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="serif"
        android:text="@string/alc_welcome"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="120dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/background_design"
        android:fontFamily="serif"
        android:text="@string/about_alc"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="125dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="125dp"
        android:background="@drawable/background_design"
        android:fontFamily="serif"
        android:text="@string/my_profile"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

</LinearLayout>